# agent-runtime

./: .env.example  README.md  agentrun.db  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  WRITING_SCENARIOS.md
docs/explainers/: brief.tex  deep-dive.tex
docs/screenshots/: run-output.txt
scenarios/data_entry/: batch_entry_with_listing.yaml  create_new_sheet.yaml  fix_cell_typo.yaml  invalid_tool_args.yaml  malformed_then_recover.yaml  out_of_range_cell.yaml  transcribe_two_records.yaml  write_timeout_retry.yaml
scenarios/ops_assistant/: adapter_flap_500.yaml  chase_overdue_acme.yaml  deny_email_fallback.yaml  flaky_sheet_read.yaml  mark_invoice_paid.yaml  no_overdue_noop.yaml  schedule_followup_call.yaml  two_reminder_emails.yaml
scenarios/research/: adapter_down_fails_run.yaml  blocked_host.yaml  cite_sources_digest.yaml  empty_notes_graceful.yaml  malformed_output_fails_run.yaml  multi_source_synthesis.yaml  read_fails_every_retry.yaml  summarize_notes.yaml
src/agent_runtime/: __init__.py  accounting.py  agents.py  bootstrap.py  cli.py  events.py  faults.py  projection.py  replay.py  runtime.py  store.py
src/agent_runtime/adapters/: __init__.py  anthropic_adapter.py  base.py  mock.py  openai_adapter.py
src/agent_runtime/scenarios/: __init__.py  loader.py  report.py  runner.py
src/agent_runtime/tools/: __init__.py  builtin.py  (+2 more)
tests/: conftest.py  test_accounting.py  test_adapters.py  test_cli.py  test_executor.py  test_faults.py  test_replay.py  test_resume.py  test_runtime.py  test_scenarios.py  test_store.py  test_tools.py  test_web.py
(+2 files in other folders)
