[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Event-sourced agent runtime: deterministic replay, approval gates, failure injection, scenario regression testing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Salman Adnan" }]
dependencies = [
    "click>=8.1,<9",
    "PyYAML>=6.0,<7",
    "jsonschema>=4.20,<5",
    "httpx>=0.27,<1",
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
    "python-multipart>=0.0.9,<0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[project.scripts]
agentrun = "agent_runtime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
